<resources>
    <string name="app_name">Chat Application</string>
    <string name="create_new_account">Create new account</string>
    <string name="welcome_to_chat_app">Welcome to Chat App</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="button">Button</string>
    <string name="create_account">create_account</string>
    <string name="logout">Logout</string>
    <string name="all_users">All users</string>
    <string name="account_settings">Account settings</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="are_you_a_new_user">Are you a new user?</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="need_a_new_account">Need a new account?</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="requests_fragment">Requests Fragment</string>
    <string name="friends_fragment">Friends Fragment</string>
    <string name="displayname">DisplayName</string>
    <string name="hi_there_i_m_using_chat_app">Hi there,I\'m using chat App.</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="change_status">CHANGE STATUS</string>
</resources>
